# questioner

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  all-together.py  answer.py  pyproject.toml  questioner.py  requirements.txt  sonar-project.properties
src/questioner/: alltogether.py
tests/: test_all_together.py  test_answer.py  test_questioner.py
