[project]
name = "questioner"
version = "0.1.0"
description = "A project that interacts with the OpenAI ChatGPT model to assist in answering user questions related to development projects."
readme = "README.md"
authors = [
    { name = "Ian Ellis", email = "ellisiana@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["chatgpt", "openai", "qa", "development", "project assistance"]

dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "certifi>=2025.1.31",
    "coverage>=7.8.0",
    "distro>=1.9.0",
    "h11>=0.14.0",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "idna>=3.10",
    "jiter>=0.9.0",
    "openai>=1.70.0",
    "pydantic>=2.11.1",
    "pydantic_core>=2.33.0",
    "pyjson>=1.4.1",
    "sniffio>=1.3.1",
    "tqdm>=4.67.1",
    "typing-inspection>=0.4.0",
    "typing_extensions>=4.13.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
]

[project.urls]
Homepage = "https://github.com/magicalbob/questioner/wiki"
Repository = "https://github.com/magicalbob/questioner"
